Fixed Kaufman block alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,7 @@
   min-height: 600px;
   max-height: 756px;
   position: relative;
+  oveflow: hidden;
 }
 
 .logo_place_header {
@@ -30,7 +31,7 @@
   position: absolute;
   top: 30px;
   left: 64px;
-  z-index: 1;
+  /*z-index: 1;*/
 }
 
 .header__title {
@@ -63,7 +64,7 @@
   position: absolute;
   width: 765px;
   height: 608px;
-  right: 0px;
+  right: 0;
   bottom: 0;
   z-index: 2;
 }
@@ -230,61 +231,37 @@
   background-color:  #1f1f1f;
   color: white;
   position: relative;
-  /*display: flex;
-  flex-wrap: wrap;*/
+  display: flex;
+  flex-direction: column;
+  /*flex-wrap: wrap;*/
+  align-items: center;
   overflow: hidden;
-
   padding-top: 90px;
   padding-bottom: 90px;
 }
 
 .section__title_theme_dark {
-  /*color: white;
-  line-height: 1.15;
-  font-size: 60px;
-  font-weight: bold;
-  z-index: 1;
-  padding: 0 20%;
-  text-align: center;*/
   width: 60%;
-  margin: 0;
-  padding: 0 20%;
+  color: white;
   text-align: center;
   font-weight: bold;
   font-size: 60px;
   line-height: 1.15;
-  z-index: 2;
-  color: white;
+  margin: 0;
 }
 
 .section__subtitle_theme_dark {
-  /*color: white;
   width: 60%;
-  line-height: 34px;
-  font-size: 24px;
-  font-weight: normal;
-  text-align: center;
-  margin: 0;
-  padding: 0 20%;
-  z-index: 1;*/
-  width: 60%;
-  margin: 20px 0 0;
-  padding: 0 20%;
-  text-align: center;
-  font-weight: normal;
-  font-size: 24px;
-  line-height: 34px;
-  z-index: 2;
   color: white;
+  text-align: center;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 34px;
+  padding-top: 20px;
+  margin: 0;
 }
 
 .table_theme_dark {
-  /*display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between
-  width: 1100px;
-  margin: auto;*/
   width: 1100px;
   display: flex;
   margin: 0 auto;
@@ -296,18 +273,12 @@
 .table__cell_theme_dark {
   color: white;
   margin-top: 80px;
- 
-  /*margin-bottom: 80px;
-  margin-right: 20px;*/
   z-index: 2;
   width: 200px;
   vertical-align: top;
 }
 
 .table__heading_theme_dark {
-  /*line-height: 1.15;
-  font-size: 24px;
-  font-weight: bold;*/
   font-weight: bold;
   font-size: 24px;
   line-height: 1.15;
@@ -317,10 +288,7 @@
 }
 
 .table__text_theme_dark {
-  /*margin-top: 20px;
-  line-height: 1.2;
-  font-size: 18px;
-  font-weight: normal;*/
+  /*margin-top: 20px;*/
   font-weight: normal;
   font-size: 18px;
   line-height: 1.2;
@@ -335,6 +303,7 @@
   position: absolute;
   right: -210px;
   top: 0px;
+  z-index: 1;
 }
 
 .footer {
